ops/k8s/livbiko-web/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livbiko-web
  namespace: tekeche
spec:
  type: ClusterIP
  selector:
    app: livbiko-web
  ports:
    - port: 8080
      targetPort: 8080
